# matrix_project

./: CMakeLists.txt  README  generate_hostfile.sh
include/: matrix_compression.h  matrix_generation.h  matrix_multiplication.h  mpi_matrix_compression.h  timing.h
report/: generate_results.py
src/: main.c  matrix_compression.c  matrix_generation.c  matrix_multiplication.c  mpi_matrix_compression.c
tests/: matrix_verification.c  mpi_hello_world.c  test_matrix_operations.c  test_parallel_matrices.c  test_parallel_matrices_varying_parallelisation.c
